// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates Ratings and Reviews Components Creates a Comfort Fit Rating Component Comfort Fit Rating 1`] = `
Array [
  <div
    className="m-0 p-0 row"
  >
    Size
  </div>,
  <div
    className="m-0 p-0 row"
  >
    <span
      style={
        Object {
          "marginLeft": "60%",
        }
      }
    >
      <i
        className="bi bi-caret-down-fill"
      />
    </span>
  </div>,
  <div
    className="m-0 p-0 row"
  >
    <div
      className="m-0 p-0 d-flex justify-content-start col"
    >
      <span>
        Poor
      </span>
    </div>
    <div
      className="m-0 p-0 d-flex justify-content-end col"
    >
      <span>
        Perfect
      </span>
    </div>
  </div>,
]
`;

exports[`Creates Ratings and Reviews Components Creates a Rating Breakdown Component  Rating Breakdown 1`] = `
Array [
  <div
    className="m-0 p-0 row"
  >
    <div
      className="m-0 p-0 col-sm-2"
    >
      5
    </div>
    <div
      className="m-0 p-0 col"
    >
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={9.523809523809524}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "9.524%",
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="m-0 p-0 row"
  >
    <div
      className="m-0 p-0 col-sm-2"
    >
      4
    </div>
    <div
      className="m-0 p-0 col"
    >
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={14.285714285714285}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "14.286%",
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="m-0 p-0 row"
  >
    <div
      className="m-0 p-0 col-sm-2"
    >
      3
    </div>
    <div
      className="m-0 p-0 col"
    >
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={23.809523809523807}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "23.81%",
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="m-0 p-0 row"
  >
    <div
      className="m-0 p-0 col-sm-2"
    >
      2
    </div>
    <div
      className="m-0 p-0 col"
    >
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={4.761904761904762}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "4.762%",
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="m-0 p-0 row"
  >
    <div
      className="m-0 p-0 col-sm-2"
    >
      1
    </div>
    <div
      className="m-0 p-0 col"
    >
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={47.61904761904761}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "47.619%",
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Creates Ratings and Reviews Components Creates a Review Component Reviews 1`] = `"Reviews are loading..."`;

exports[`Creates Ratings and Reviews Components Creates a Size Fit Rating Component Size Fit Rating 1`] = `
Array [
  <div
    className="m-0 p-0 row"
  >
    Size
  </div>,
  <div
    className="m-0 p-0 row"
  >
    <span
      style={
        Object {
          "marginLeft": "60%",
        }
      }
    >
      <i
        className="bi bi-caret-down-fill"
      />
    </span>
  </div>,
  <div
    className="m-0 p-0 row"
  >
    <div
      className="m-0 p-0 d-flex justify-content-start col"
    >
      <span>
        Too Small
      </span>
    </div>
    <div
      className="m-0 p-0 d-flex justify-content-center col"
    >
      <span>
        Perfect
      </span>
    </div>
    <div
      className="m-0 p-0 d-flex justify-content-end col"
    >
      <span>
        Too Large
      </span>
    </div>
  </div>,
]
`;

exports[`Creates Ratings and Reviews Components Creates a Star Rating Component Star 1`] = `
<span
  onMouseLeave={[Function]}
  style={
    Object {
      "direction": "ltr",
      "display": "inline-block",
    }
  }
>
  <span
    onClick={[Function]}
    onMouseMove={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "display": "inline-block",
        "position": "relative",
      }
    }
  >
    <span
      style={Object {}}
    >
      <span
        style={
          Object {
            "backgroundColor": "#ccc",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
      />
    </span>
    <span
      style={
        Object {
          "display": "inline-block",
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": "0%",
        }
      }
    >
      <span
        style={
          Object {
            "backgroundColor": "black",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
      />
    </span>
  </span>
  <span
    onClick={[Function]}
    onMouseMove={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "display": "inline-block",
        "position": "relative",
      }
    }
  >
    <span
      style={Object {}}
    >
      <span
        style={
          Object {
            "backgroundColor": "#ccc",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
      />
    </span>
    <span
      style={
        Object {
          "display": "inline-block",
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": "0%",
        }
      }
    >
      <span
        style={
          Object {
            "backgroundColor": "black",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
      />
    </span>
  </span>
  <span
    onClick={[Function]}
    onMouseMove={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "display": "inline-block",
        "position": "relative",
      }
    }
  >
    <span
      style={Object {}}
    >
      <span
        style={
          Object {
            "backgroundColor": "#ccc",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
      />
    </span>
    <span
      style={
        Object {
          "display": "inline-block",
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": "0%",
        }
      }
    >
      <span
        style={
          Object {
            "backgroundColor": "black",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
      />
    </span>
  </span>
  <span
    onClick={[Function]}
    onMouseMove={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "display": "inline-block",
        "position": "relative",
      }
    }
  >
    <span
      style={Object {}}
    >
      <span
        style={
          Object {
            "backgroundColor": "#ccc",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
      />
    </span>
    <span
      style={
        Object {
          "display": "inline-block",
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": "0%",
        }
      }
    >
      <span
        style={
          Object {
            "backgroundColor": "black",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
      />
    </span>
  </span>
  <span
    onClick={[Function]}
    onMouseMove={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "display": "inline-block",
        "position": "relative",
      }
    }
  >
    <span
      style={Object {}}
    >
      <span
        style={
          Object {
            "backgroundColor": "#ccc",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
      />
    </span>
    <span
      style={
        Object {
          "display": "inline-block",
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": "0%",
        }
      }
    >
      <span
        style={
          Object {
            "backgroundColor": "black",
            "border": "5px double white",
            "borderRadius": "50%",
            "display": "inline-block",
            "height": 30,
            "width": 30,
          }
        }
      />
    </span>
  </span>
</span>
`;
